Additional JVM Args for hazelcast, additional logging around hazelcast lock aquisition